<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_user"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <group android:menuCategory="container">
        <item android:id="@+id/settingButton"
            android:title="@string/setting"
            android:icon = "@drawable/ic_baseline_settings_24"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/favoriteButton"
            android:title="@string/favorite"
            android:icon = "@drawable/ic_baseline_favorite_24"
            app:showAsAction="ifRoom" />
    </group>
</menu>